--- a/Rent2Go/nbproject/project.properties
+++ b/Rent2Go/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Car2Go
 excludes=
+file.reference.gson-2.8.9.jar=C:\\Users\\User\\Downloads\\gson-2.8.9.jar
 file.reference.json-simple-1.1.jar=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gson-2.8.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
